--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
+    "express": "^4.20.0",
     "firebase-tools": "^13.16.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
